<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:id="@+id/linearLayout2">

        <EditText
            android:id="@+id/input_medicine_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Medicine (Vitamin A)"
            android:inputType="textPersonName"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/input_medicine_portion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Portion (2 pills)"
            android:inputType="textPersonName"
            android:singleLine="true"/>

        <Spinner
            android:id="@+id/regularity_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/tvStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select start date"
            android:gravity="center"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/tvEndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select end date"
            android:gravity="center"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/tvTakeTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select take time"
            android:gravity="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/submitMedicineButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submit" />


        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />
    </LinearLayout>

</RelativeLayout>