...
        android:layout_weight="10"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/medicine_info_ll"
        app:layout_constraintTop_toTopOf="@id/medicine_info_ll">

        <ImageButton
            android:id="@+id/button_delete"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:background="@null"
            android:src="@drawable/baseline_delete_24" />

        <ImageButton
            android:id="@+id/button_edit"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
...
