<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ExploreFragment">

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/transparent">

        <LinearLayout
            android:id="@+id/explore_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/dependent_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="85"
                    android:hint="Add dependent"
                    android:singleLine="true"
                    android:imeOptions="actionSend"/>

                <ImageView
                    android:id="@+id/search_iv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="15"
                    android:scaleType="fitCenter"
                    android:src="@drawable/send_request" />

            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/explore_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </LinearLayout>


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</RelativeLayout>