...
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/take_time_tv" />
        </LinearLayout>

        <ImageView
            android:id="@+id/show_meds_iv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:background="@color/white"
            android:scaleType="fitCenter"
            android:src="@drawable/open_schedule" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/profiles_lists_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"

        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

...
